Fix answer dialog overflow
Previously the answer box overflowed vertically after answering a question.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -335,7 +335,7 @@ canvas {
 #center-box {
     display: none;
     background-color: var(--main-purple);
-    padding: 200px 150px;
+    padding: 100px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     z-index: 10;
